# char-level-transformer-lm

./: .gitignore  LICENSE  README.md  generate.py  pyproject.toml  train.py
.github/workflows/: tests.yml
configs/: owt.yaml  tinystories.yaml  tinystories_60m.yaml
cs336_basics/: __init__.py  attention.py  data_sft.py  dpo.py  model.py  nn_components.py  optimizer.py  streaming.py  tokenizer.py  training.py
data/: tinystories_merges.txt  tinystories_vocab.json
docs/: results.md
model/: transformer.py
notebooks/: colab_post_training.ipynb  colab_pretrain_60m.ipynb
scripts/: benchmark.py  build_preference_dataset.py  build_sft_dataset.py  chat.py  download_tinystories_v2.py  eval_all.py  evaluate.py  generate.py  label_preferences.py  lr_find.py  playground.py  run_ablations.py  serve.py  split_data.py  train.py  train_dpo.py  train_sft.py  train_tokenizer.py  upload_checkpoints_to_hf.py
spaces/: README.md  app.py  requirements.txt
tests/: smoke_train.py  test_advanced.py  test_data_sft.py  test_dpo.py  test_model.py  test_padding_mask.py  test_serve.py  test_tokenizer.py  test_training.py
tokenizer/: bpe.py
utils/: dataset.py  metrics.py
