[project]
name = "cs336-basics"
version = "0.1.0"
description = "Transformer language model built from scratch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "regex>=2023.0.0",
    "einops>=0.7.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
]
logging = [
    "wandb>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cs336_basics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
